@@ -1,3 +1,10 @@
+2022-02-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-trans.c (pkl_trans1_ps_op_attr): Dereference node
+	property after making sure it's valid.
+	* testsuite/poke.pkl/adda-diag-1.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
 2022-02-02  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pvm.c (pvm_run): exit_exception is mandatory.
